more diluted ack

--- a/paper1/ack.tex
+++ b/paper1/ack.tex
@@ -1,4 +1,4 @@
 
 
-Many thanks to Stelios Sidiroglou-Douskos and Jannick Pewny for valuable early discussions and suggestions.  
+Many thanks to Graham Baker, Chris Connelly, Jannick Pewny, and Stelios Sidiroglou-Douskos for valuable early discussions and suggestions.  
 In addition, we thank Amy Jiang for some critical initial Clang development and debugging.
