words about graphs

--- a/paper1/overview.tex
+++ b/paper1/overview.tex
@@ -74,11 +74,22 @@ If one were to fuzz dead input bytes, the program should be indifferent and exec
 In the running example, $LIV(0..3)=1$ after line 3, since \verb+a+ is a direct copy of input bytes 0..3.
 After each iteration of the loop, the liveness of bytes 8..11, the loop bound, increase by one, and so after the loop $LIV(8..11)=n$.
 
-Figures~\ref{fig:liv-graph} and~\ref{fig:tcn-graph} are plots of liveness and taint computer number for the program \verb+file+ processing the input \verb+/bin/ls+.
+Figures~\ref{fig:liv-graph} and~\ref{fig:tcn-graph} are plots of liveness and taint compute number for the program \verb+file+ processing the input \verb+/bin/ls+.
 In both plots, the horizontal axis is the number of replay instructions processed, and so corresponds, roughly, to time.
-The vertical axis is file position, so the bottom is the first byte in \verb+/bin/ls+ and the top is the 70th byte.  
+The vertical axis is file position, so at bottom is the first byte in \verb+/bin/ls+ and at top is the 70th byte.  
 Obviously, \verb+/bin/ls+ is bigger than 70 bytes.  
-However, only the 64-byte elf header has any interesting liveness or taint compute number and so we restrict our attention, in these plots, to that portion of the file.
+However, as expected, only the 64-byte ELF header has any interesting liveness or taint compute number values and so we restrict our attention, in these plots, to that section.
+Higher values for liveness and taint compute number are represented on both plots by darker patches.  
+Thus, portions that are very light for large horizontal stretches starting at the left on both plots are DUAs.
+For instance, bytes 28-32, which point to the start of the program header table, are uninvolved in branches or computation.   
+Presumably these would make a fine DUA, and it seems reasonable that \verb+file+ simply doesn't have much use for this information.
+Whereas bytes 19 and 20, which indicate the instruction set, are very live after about 55M instructions.
+This is reasonable since \verb+file+ needs to report this information in human-readable form, such as \verb+x86_64+.
+However, consider bytes 10-16, which are apparently being used in a number of branches.  
+This is odd considering they are marked as unused in the ELF header spec.
+These kinds of disparities make a good argument for using taint-based measures to inject bugs rather than trusting published specs.  
+
+
 
                                                                                                       
 
