--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -52,7 +52,7 @@
 	Booktitle = {Workshop on Program Protection and Reverse Engineering ({PPREW})},
 	Date-Added = {2015-10-08 17:56:44 +0000},
 	Date-Modified = {2015-11-10 23:00:58 +0000},
-	Title = {Repeatable Reverse Engineering for the Greater Good with {PANDA}},
+	Title = {Repeatable Reverse Engineering with {PANDA}},
 	Year = {2015}}
 
 @techreport{Juliet:2012,
