--- a/paper1/overview.tex
+++ b/paper1/overview.tex
@@ -42,7 +42,8 @@ Multiple threads and processes are also handled correctly, so that taint flows a
 
 \begin{figure}
 \centering
-\includegraphics[scale=0]{tcn.pdf}
+%\includegraphics[scale=0]{tcn.pdf}
+\includegraphics{tcn.pdf}
 \caption{Taint Compute Number examples from the running example.  
 TCN is simply the depth of the tree of computation that produces the value from tainted inputs.
 TCN(c) after line 2 is 1, and after line 6 (upon exiting the loop), it is n+1.}
