final rev to pass draconian ieee pdf check

--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -2,7 +2,13 @@
 \IEEEoverridecommandlockouts
 \usepackage{epsfig,graphicx}
 % \usepackage[hyphens]{url}
-\usepackage{hyperref}
+
+%\usepackage[options]{nohyperref}  % This makes hyperref commands do nothing without errors
+%\usepackage{nohyperref}  % This makes hyperref commands do nothing without errors
+%\usepackage{url}  % This makes \url work
+
+\usepackage[draft,bookmarks=false]{hyperref}
+
 \usepackage{amsmath}
 \usepackage{multirow}
 
